# tgit

./: Cargo.toml  LICENSE
examples/: checkbox.rs  hellogithub.rs  tui.rs
examples/demo/: main.rs
src/: app.rs  cli.rs  cmd.rs  git_cmd.rs  lib.rs  main.rs  widget.rs
src/widget/: checkbox.rs
