[package]
name = "tgit"
version = "0.1.0"
authors = ["Jumper <dapengsusu@qq.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
rust-version = "1.56.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
crossterm = "0.25.0"
tui = "0.19.0"
unicode-width = "0.1.10"

[dev-dependencies]
argh = "0.1.9"
rand = "0.8.5"
