[package]
name = "tgit"
version = "0.1.0"
authors = ["Jumper <dapengsusu@qq.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
rust-version = "1.56.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.25.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tui = "0.19.0"
unicode-width = "0.1"

[dev-dependencies]
argh = "0.1"
rand = "0.8"
